fix letter spacing again

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1197,6 +1197,9 @@ canvas {
         letter-spacing:-2px;
     }
 
+    .shorterLetterSpace {
+        letter-spacing:-1px;
+    }
     .waterInfo {
         background-color:lightblue;
         height:50em;
